ndb - bug#23200   this changes lock taken during peek, to decrease likelyhood of transaction abort

sql/ha_ndbcluster.cc:
  use exclusive lock in peek, as peek is used just before insert/update