sql/ha_ndbcluster.cc
@@ -1588,7 +1588,9 @@ int ha_ndbcluster::peek_indexed_rows(const byte *record)
   int res;
   DBUG_ENTER("peek_indexed_rows");
 
-  NdbOperation::LockMode lm= NdbOperation::LM_Read;
+  NdbOperation::LockMode lm=
+    (NdbOperation::LockMode)get_ndb_lock_type(m_lock.type);
+  
   first= NULL;
   if (table->s->primary_key != MAX_KEY)
   {
